--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -1,4 +1,4 @@
 \section{Einleitung}
 
-Die thermoelektrischen Effekte sind in allen Bereichen des Lebens wiederzufinden – in der Wissenschaft, der Technik und dem alltäglichen Leben. Auf ihnen basieren die Möglichkeiten, sehr genau computergestützt Temperaturen zu messen oder feine Temperaturunterschiede einzustellen. In diesem Versuch wird besonders darauf eingegangen, den Seebeck-Koeffizienten des Thermoelements und den Peltier-Koeffizienten des Peltier-Elements zu ermitteln. 
-Der Versuch ist im Bereich der Wärmelehre anzusiedeln und benötigt somit Thermometer und Multimeter als Messgeräte. Beim thermoelektrischen Effekt wird der Zusammenhang zwischen einer Temperaturdifferenz in zwei Leitern oder auch Halbleitern und der Spannung zwischen diesen beiden Leitern hergestellt. Beim Peltier-Effekt hingegen wird mithilfe eines Stromflusses eine Temperaturdifferenz erzeugt.
+Die thermoelektrischen Effekte sind in allen Bereichen des Lebens wiederzufinden, in der Wissenschaft, der Technik und dem alltäglichen Leben. Auf ihnen basieren die Möglichkeiten, sehr genau computergestützt Temperaturen zu messen oder feine Temperaturunterschiede einzustellen. In diesem Versuch wird besonders darauf eingegangen, den Seebeck-Koeffizienten des Thermoelements und den Peltier-Koeffizienten des Peltier-Elements zu ermitteln. 
+Der Versuch ist im Bereich der Wärmelehre anzusiedeln und benötigt somit Thermometer und Multimeter als Messgeräte. Beim thermoelektrischen Effekt wird der Zusammenhang zwischen einer Temperaturdifferenz in zwei Leitern oder auch Halbleitern und der Spannung zwischen diesen beiden Leitern hergestellt hierbei werden die Werte der Temperatur gegenüber den Werten der Spannung gestellt. Beim Peltier-Effekt hingegen wird mithilfe eines Stromflusses eine Temperaturdifferenz erzeugt hier werden nun die Werte der Stromstärke, den Werten der Temperatur und den Werten der Spannung am Thermoelement gegenüber gestellt.
