--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -1,1 +1,23 @@
 \section{Zusammenfassung}
+
+Die zentrale Erkenntnis des Versuchs, dass es möglich ist, mittels eines Temperaturgefälles Strom zu erzeugen, wurde bestätigt. Es wurden die Seebeck-Koeffizienten des Thermoelements und des Peltier-Elements bestimmt. Auch wenn diese nicht mit Literaturwerten überprüft werden, wurde zumindest beim Peltier-Element ein zweiter Ansatz zur Bestimmung des Seebeck-Koeffizienten durchgerechnet. Dieses Ergebnis weicht nur um einen Faktor von 1{,}5 von dem Ergebnis des anderen Ansatzes ab. 
+
+Für den Seebeck-Koeffizienten des Thermoelements wurde ein Wert von 
+\[
+(4{,}49 \pm 0{,}23) \cdot 10^{-5} \,\frac{\mathrm{V}}{\mathrm{K}}
+\]
+bestimmt, und für das Peltier-Element ergab sich für den ersten Ansatz ein Wert von 
+\[
+(5{,}49 \pm 1{,}44) \cdot 10^{-2} \,\frac{\mathrm{V}}{\mathrm{K}},
+\]
+und für den zweiten Ansatz ein Wert von 
+\[
+(3{,}73 \pm 0{,}27) \cdot 10^{-2} \,\frac{\mathrm{V}}{\mathrm{K}}.
+\]
+
+Zusätzlich wurde der Peltier-Koeffizient bestimmt. Es ergab sich ein Wert von 
+\[
+(10{,}615 \pm 0{,}781)\,\mathrm{V}.
+\]
+
+Die teils recht hohen statistischen Fehler könnten mit genaueren Messgeräten verringert werden. Auch die joulesche Wärme hatte Einfluss auf die Messergebnisse; dies könnte verringert werden, indem die Messungen insgesamt bei einer geringeren Stromstärke stattfinden.
