--- a/Laborbuch(Anhang).tex
+++ b/Laborbuch(Anhang).tex
@@ -1,1 +1,17 @@
 \section{Anhang}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Unbenannt4.jpg}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Unbenannt3.jpg}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Unbenannt2.jpg}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Unbenannt1.jpg}
+\end{figure}
